<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MainActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="160dp"

        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/main.backdrop"
                    android:layout_width="124dp"
                    android:layout_height="63dp"
                    android:layout_gravity="center|top"
                    android:src="@drawable/isourse_logo_white"
                    app:layout_collapseMode="none" />

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="32dp"
                    android:layout_margin="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <ImageView
                        android:id="@+id/timer_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fitsSystemWindows="true"
                        android:src="@drawable/av_timer_white"
                        app:layout_collapseMode="parallax" />


                    <Chronometer
                        android:id="@+id/chronometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="#FFFFFF" />


                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/day_in_day_out_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="128dp"

                        android:hint="@string/day_in"
                        android:textOff="@string/day_out"
                        android:textOn="@string/day_in" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="0dp"
                    android:orientation="horizontal"
                    android:padding="0dp">


                    <TextView
                        android:id="@+id/last_day_in_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fitsSystemWindows="true"
                        android:text="@string/last_day_in"
                        android:textColor="@android:color/white"
                        app:layout_collapseMode="parallax" />


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/last_day_out_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_margin="@dimen/normal_margin"
                            android:fitsSystemWindows="true"
                            android:text="@string/last_day_out"
                            android:textColor="@android:color/white"
                            app:layout_collapseMode="parallax" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <include

        android:id="@+id/content_scrolling"
        layout="@layout/content_scrolling" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.design.widget.CoordinatorLayout>