<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">



        <!--<include-->
            <!--android:id="@+id/toolbar_"-->
            <!--layout="@layout/app_bar" />-->

        <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_marginTop="30dp"
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <FrameLayout
                    android:elevation="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        android:layout_gravity="center"
                        android:text="Isoping"
                        android:textSize="18sp"
                        android:textColor="#fff"
                         />
                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />
                </FrameLayout>



            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:background="@drawable/ic_vector"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Chronometer
                        android:id="@+id/chronometer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="43dp"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <TextView

                        android:id="@+id/last_day_in_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chronometer"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="42dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/last_day_in"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="78dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/day_in_day_out_switch"
                        android:layout_width="89dp"
                        android:layout_height="26dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="right"
                        android:layout_marginLeft="128dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="82dp"
                        android:backgroundTint="#fff"
                        android:hint="@string/day_in"
                        android:textColor="#fff"
                        android:textColorHint="@android:color/white"
                        android:textOff="@string/day_out"
                        android:textOn="@string/day_in" />


                    <TextView
                        android:id="@+id/last_day_out_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/day_in_day_out_switch"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="47dp"
                        android:text="@string/last_day_out"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>



    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.design.widget.CoordinatorLayout>